k8s/common/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airmozilla
  annotations:
   flux.weave.works/automated: "true"
   flux.weave.works/tag.web: "glob:k8s-*"
   flux.weave.works/tag.migrate: "glob:k8s-*"
spec:
  template:
    spec:
      containers:
      - name: web
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
