k8s/common/nginx-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
spec:
  ports:
  - name: https
    port: 443
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  template:
    spec:
      containers:
      - name: nginx-ingress-controller
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 256Mi
