k8s/common/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: airmozilla
spec:
  rules:
  - host: not-set
    http:
      paths:
      - backend:
          serviceName: airmozilla
          servicePort: 80
        path: /
